--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,8 @@ requires=python-dateutil
 
 [wheel]
 universal = 1
+
+[flake8]
+max-line-length = 100
+ignore = E128
+exclude = build/, venv, ENV, ve, docs/, examples/
